# agentic_design_patterns_code

./: LICENSE  pyproject.toml  readme.md
chapter_1_prompt_chaining/: doubao_prompt_chaining.py  first_doubao_call.py  prompt_chaining.py
chapter_2_routing/: doubao_litellm.py  keep_accounts.py  routing_with_adk.py  routing_with_langchain.py
chapter_3_parallelization/: parallelization_langchain.py
chapter_4_reflection/: reflection_adk.py  reflection_langchain.py
